# Fabric-vs-BTGenBot-comparison

./: .gitignore  README.md  readme.md
Experiment_1/source/Fabric/workspace/src/capabilities2/capabilities2_runner/: CMakeLists.txt  package.xml
Experiment_1/source/Fabric/workspace/src/capabilities2/capabilities2_runner_system/: CMakeLists.txt  package.xml  plugins.xml
Experiment_1/source/Fabric/workspace/src/capabilities2/capabilities2_server/: CMakeLists.txt  package.xml
Experiment_1/source/Fabric/workspace/src/capabilities2_runner_fabric/: CMakeLists.txt  package.xml
Experiment_1/source/Fabric/workspace/src/capabilities2_runner_fabric/interfaces/: FabricCompletionRunner.yaml
Experiment_1/source/Fabric/workspace/src/capabilities2_runner_fabric/providers/: FabricSetPlanRunner.yaml
Experiment_1/source/Fabric/workspace/src/capabilities2_runner_fabric/src/: fabric_runners.cpp
Experiment_1/source/Fabric/workspace/src/capabilities2_runner_nav2/: CMakeLists.txt  README.md  package.xml
Experiment_1/source/Fabric/workspace/src/capabilities2_runner_nav2/interfaces/: WaypointRunner.yaml
Experiment_1/source/Fabric/workspace/src/capabilities2_runner_nav2/providers/: Nav2LaunchRunner.yaml
Experiment_1/source/Fabric/workspace/src/capabilities2_runner_prompt/: CMakeLists.txt  package.xml
Experiment_1/source/Fabric/workspace/src/capabilities2_runner_prompt/interfaces/: PromptCapabilityRunner.yaml  PromptPlanRunner.yaml
Experiment_1/source/Fabric/workspace/src/capabilities2_runner_prompt/providers/: PromptLaunchRunner.yaml
Experiment_1/source/Fabric/workspace/src/prompt_tools/prompt_ollama/: CMakeLists.txt  package.xml  plugins.xml
Experiment_2/workspace/src/capabilities2/capabilities2/: CMakeLists.txt  package.xml
Experiment_2/workspace/src/capabilities2/capabilities2_events/: CMakeLists.txt  package.xml  readme.md
Experiment_2/workspace/src/capabilities2/capabilities2_events/include/capabilities2_events/: event_base.hpp  event_node.hpp  event_parameters.hpp  published_event.hpp  uuid_generator.hpp
Experiment_2/workspace/src/capabilities2/capabilities2_events/src/: uuid_generator.cpp
Experiment_2/workspace/src/capabilities2/capabilities2_msgs/: CMakeLists.txt  package.xml  readme.md
Experiment_2/workspace/src/capabilities2/capabilities2_msgs/msg/: Capability.msg  CapabilityConnection.msg  CapabilityEvent.msg  CapabilityEventCode.msg  CapabilityEventStamped.msg  CapabilityParameter.msg
Experiment_2/workspace/src/capabilities2/capabilities2_msgs/srv/: ConnectCapability.srv  TriggerCapability.srv
Experiment_2/workspace/src/capabilities2/capabilities2_runner/: CMakeLists.txt  package.xml  plugins.xml  readme.md
Experiment_2/workspace/src/capabilities2/capabilities2_runner/docs/: parameter_format.md
Experiment_2/workspace/src/capabilities2/capabilities2_runner/include/capabilities2_runner/: action_runner.hpp  encap_runner.hpp  launch_runner.hpp  notrigger_runner.hpp  runner_base.hpp  service_runner.hpp  threadtrigger_runner.hpp  topic_runner.hpp
Experiment_2/workspace/src/capabilities2/capabilities2_runner/interfaces/: GetCapabilitySpecsRunner.yaml  InputMultiplexRunner.yaml
Experiment_2/workspace/src/capabilities2/capabilities2_runner/providers/: GetCapabilitySpecsRunner.yaml  InputMultiplexRunner.yaml
Experiment_2/workspace/src/capabilities2/capabilities2_runner/src/: dummy_runner.cpp  launch_runner.cpp
Experiment_2/workspace/src/capabilities2/capabilities2_runner/src/system/: system_runners.cpp
Experiment_2/workspace/src/fabric/fabric_parser_xml/: CMakeLists.txt  package.xml  plugins.xml
Experiment_2/workspace/src/fabric/fabric_parser_xml/include/fabric_parser_xml/: xml_parser_plugin.hpp
Experiment_2/workspace/src/fabric/fabric_parser_xml/src/: parser.cpp
Experiment_2/workspace/src/fabric/fabric_server/: CMakeLists.txt  package.xml
Experiment_2/workspace/src/fabric/fabric_server/src/: server_component.cpp  server_node.cpp
Experiment_2/workspace/src/fabric/fabric_validator/: CMakeLists.txt  package.xml  plugins.xml
Experiment_2/workspace/src/fabric/fabric_validator/src/: validators.cpp
Experiment_2/workspace/src/fabric_capabilities/: CMakeLists.txt  README.md  package.xml  plugins.xml
Experiment_2/workspace/src/fabric_capabilities/include/fabric_capabilities/: completion_runner.hpp  set_plan_runner.hpp
Experiment_2/workspace/src/fabric_capabilities/interfaces/: FabricSetPlanRunner.yaml
Experiment_2/workspace/src/fabric_capabilities/providers/: FabricCompletionRunner.yaml  FabricSetPlanRunner.yaml
Experiment_2/workspace/src/fabric_capabilities/src/: fabric_runners.cpp
Experiment_2/workspace/src/prompt_tools/prompt_bridge/: CMakeLists.txt  package.xml
Experiment_2/workspace/src/prompt_tools/prompt_bridge/config/: prompt_bridge.yaml
Experiment_2/workspace/src/prompt_tools/prompt_bridge/src/: prompt_bridge_node.cpp
Experiment_2/workspace/src/prompt_tools/prompt_bridge/test/: test_prompt.cpp
Experiment_2/workspace/src/prompt_tools/prompt_msgs/: CMakeLists.txt  package.xml  readme.md
Experiment_2/workspace/src/prompt_tools/prompt_msgs/msg/: Embed.msg  EmbedResponse.msg  Embedding.msg  ModelOption.msg  Prompt.msg  Token.msg  TokenResponse.msg
Experiment_2/workspace/src/prompt_tools/prompt_msgs/srv/: Embedding.srv  Prompt.srv  Tokenize.srv
Experiment_2/workspace/src/prompt_tools/prompt_ollama/: package.xml  plugins.xml  readme.md
Experiment_2/workspace/src/prompt_tools/prompt_ollama/src/: prompt_provider.cpp
Experiment_2/workspace/src/prompt_tools/prompt_openai/: CMakeLists.txt  package.xml  plugins.xml  readme.md
Experiment_2/workspace/src/prompt_tools/prompt_openai/src/: prompt_provider.cpp
source/Fabric/workspace/src/capabilities2/capabilities2/: package.xml
source/Fabric/workspace/src/capabilities2/capabilities2_runner_capabilities/: package.xml  plugins.xml
source/Fabric/workspace/src/fabric/fabric/: CMakeLists.txt  package.xml
source/Fabric/workspace/src/prompt_tools/prompt_bridge/: CMakeLists.txt  readme.md
source/Fabric/workspace/src/prompt_tools/prompt_tools/: package.xml
(+500 files in other folders)
