<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fabric_capabilities</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>pluginlib</depend>
  <depend>std_msgs</depend>
  <depend>fabric_msgs</depend>
  <depend>capabilities2_runner</depend>
  <depend>capabilities2_msgs</depend>
  <depend>capabilities2_events</depend>

  <export>
    <build_type>ament_cmake</build_type>

    <!-- FabricSetPlanRunner -->
    <capability_interface>
      interfaces/FabricSetPlanRunner.yaml
    </capability_interface>

    <capability_provider>
      providers/FabricSetPlanRunner.yaml
    </capability_provider>

    <!-- FabricCompletionRunner -->
    <capability_interface>
      interfaces/FabricCompletionRunner.yaml
    </capability_interface>

    <capability_provider>
      providers/FabricCompletionRunner.yaml
    </capability_provider>
  </export>
</package>
