<?xml version="1.0"?>
<package format="3">
  <name>capabilities2_events</name>
  <version>0.2.0</version>
  <description>
    Event subsystem for the capabilities2 framework
  </description>
  
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>capabilities2_msgs</depend>
  <depend>uuid</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
