<?xml version="1.0"?>
<package format="3">
  <name>prompt_bridge</name>
  <version>0.1.0</version>
  <description>
    This package provides a prompt bridge service prompts from large models
  </description>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp_action</depend>
  <depend>pluginlib</depend>
  <depend>prompt_msgs</depend>

  <depend>prompt_base</depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>rclcpp</test_depend>
  <test_depend>prompt_msgs</test_depend>

  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
