<?xml version="1.0"?>
<package format="3">
  <name>prompt_ollama</name>
  <version>0.1.0</version>
  <description>
    This package provides a prompt provider plugin for different language models
  </description>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>pluginlib</depend>
  <depend>prompt_msgs</depend>
  <depend>prompt_base</depend>

  <depend>libpoco-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
