<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>capabilities2_runner_prompt</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>pluginlib</depend>
  <depend>prompt_msgs</depend>
  <depend>capabilities2_msgs</depend>
  <depend>capabilities2_runner</depend>
  <depend>event_logger</depend>
  <depend>event_logger_msgs</depend>
  <depend>tinyxml2_vendor</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>

    <!-- PromptLaunchRunner -->
    <!-- <capability_interface>
      interfaces/PromptLaunchRunner.yaml
    </capability_interface> -->

    <!-- <capability_provider>
      providers/PromptLaunchRunner.yaml
    </capability_provider> -->

    <!-- PromptTextRunner -->
    <capability_interface>
      interfaces/PromptTextRunner.yaml
    </capability_interface>

    <capability_provider>
      providers/PromptTextRunner.yaml
    </capability_provider>

    <!-- PromptPoseRunner -->
    <capability_interface>
      interfaces/PromptPoseRunner.yaml
    </capability_interface>

    <capability_provider>
      providers/PromptPoseRunner.yaml
    </capability_provider>

    <!-- PromptCapabilityRunner -->
    <capability_interface>
      interfaces/PromptCapabilityRunner.yaml
    </capability_interface>

    <capability_provider>
      providers/PromptCapabilityRunner.yaml
    </capability_provider>

    <!-- PromptOccupancyRunner -->
    <capability_interface>
      interfaces/PromptOccupancyRunner.yaml
    </capability_interface>

    <capability_provider>
      providers/PromptOccupancyRunner.yaml
    </capability_provider>

    <!-- PromptPlanRunner -->
    <capability_interface>
      interfaces/PromptPlanRunner.yaml
    </capability_interface>

    <capability_provider>
      providers/PromptPlanRunner.yaml
    </capability_provider>

  </export>
</package>
